// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/CreditCardForm default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c10 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c7 {
  position: absolute;
  left: 1rem;
  padding: 0 0rem;
  background-color: transparent;
  font-size: 1rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c4:hover {
  color: rgb(33,18,94);
  outline-width: 1px;
  outline-style: solid;
  border-color: rgb(33,18,94);
  outline-color: rgb(33,18,94);
}

.c5 {
  position: relative;
  width: 100%;
}

.c6 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c3 {
  margin-bottom: 1.875rem;
  position: relative;
}

.c8 {
  position: absolute;
  top: 100%;
}

.c1 {
  width: 100%;
}

.c2 {
  width: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 > div {
  padding-right: 1rem;
}

.c9 > div:last-child {
  padding-right: 0;
}

@media (max-width:540px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:540px) {
  .c9 > div {
    padding-right: 0;
  }
}

<div
  className="c0"
>
  <form
    className="c1"
    onSubmit={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          disabled={false}
        >
          <div
            className="c5"
          >
            <input
              autoComplete="cc-number"
              autoFocus={true}
              className="c6"
              disabled={false}
              name="ccNumber"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseUp={[Function]}
              type="text"
              value=""
            />
            <label
              className="c7"
            >
              Number
            </label>
          </div>
        </div>
        <div
          className="c8"
        />
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
            disabled={false}
          >
            <div
              className="c5"
            >
              <input
                autoComplete="cc-csc"
                className="c6"
                disabled={false}
                name="ccCsc"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseUp={[Function]}
                type="text"
                value=""
              />
              <label
                className="c7"
              >
                CVC
              </label>
            </div>
          </div>
          <div
            className="c8"
          />
        </div>
      </div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
            disabled={false}
          >
            <div
              className="c5"
            >
              <input
                autoComplete="cc-exp"
                className="c6"
                disabled={false}
                name="ccExp"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseUp={[Function]}
                type="text"
                value=""
              />
              <label
                className="c7"
              >
                Expiry Date
              </label>
            </div>
          </div>
          <div
            className="c8"
          />
        </div>
      </div>
    </div>
  </form>
  <div
    className="c10"
  />
</div>
`;

exports[`Storyshots @components/organisms/CreditCardForm disabled 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c10 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c7 {
  position: absolute;
  left: 1rem;
  padding: 0 0rem;
  background-color: transparent;
  font-size: 1rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #7d7d7d;
  color: #7d7d7d;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c4:hover {
  color: #7d7d7d;
  outline-width: 0px;
  outline-style: solid;
  border-color: #7d7d7d;
  outline-color: #7d7d7d;
}

.c5 {
  position: relative;
  width: 100%;
}

.c6 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c3 {
  margin-bottom: 1.875rem;
  position: relative;
}

.c8 {
  position: absolute;
  top: 100%;
}

.c1 {
  width: 100%;
}

.c2 {
  width: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 > div {
  padding-right: 1rem;
}

.c9 > div:last-child {
  padding-right: 0;
}

@media (max-width:540px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:540px) {
  .c9 > div {
    padding-right: 0;
  }
}

<div
  className="c0"
>
  <form
    className="c1"
    onSubmit={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          disabled={true}
        >
          <div
            className="c5"
          >
            <input
              autoComplete="cc-number"
              autoFocus={true}
              className="c6"
              disabled={true}
              name="ccNumber"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseUp={[Function]}
              type="text"
              value=""
            />
            <label
              className="c7"
            >
              Number
            </label>
          </div>
        </div>
        <div
          className="c8"
        />
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
            disabled={true}
          >
            <div
              className="c5"
            >
              <input
                autoComplete="cc-csc"
                className="c6"
                disabled={true}
                name="ccCsc"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseUp={[Function]}
                type="text"
                value=""
              />
              <label
                className="c7"
              >
                CVC
              </label>
            </div>
          </div>
          <div
            className="c8"
          />
        </div>
      </div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
            disabled={true}
          >
            <div
              className="c5"
            >
              <input
                autoComplete="cc-exp"
                className="c6"
                disabled={true}
                name="ccExp"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseUp={[Function]}
                type="text"
                value=""
              />
              <label
                className="c7"
              >
                Expiry Date
              </label>
            </div>
          </div>
          <div
            className="c8"
          />
        </div>
      </div>
    </div>
  </form>
  <div
    className="c10"
  />
</div>
`;

exports[`Storyshots @components/organisms/CreditCardForm error 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c13 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c9 {
  color: #c22d74;
  font-size: 0.75rem;
}

.c10 {
  margin: 0;
}

.c7 {
  position: absolute;
  left: 1rem;
  padding: 0 0rem;
  background-color: transparent;
  font-size: 1rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c12:hover {
  color: rgb(33,18,94);
  outline-width: 1px;
  outline-style: solid;
  border-color: rgb(33,18,94);
  outline-color: rgb(33,18,94);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #c22d74;
  color: #c22d74;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c4:hover {
  color: #c22d74;
  outline-width: 1px;
  outline-style: solid;
  border-color: #c22d74;
  outline-color: #c22d74;
}

.c5 {
  position: relative;
  width: 100%;
}

.c6 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c3 {
  margin-bottom: 1.875rem;
  position: relative;
}

.c8 {
  position: absolute;
  top: 100%;
}

.c1 {
  width: 100%;
}

.c2 {
  width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 > div {
  padding-right: 1rem;
}

.c11 > div:last-child {
  padding-right: 0;
}

@media (max-width:540px) {
  .c11 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:540px) {
  .c11 > div {
    padding-right: 0;
  }
}

<div
  className="c0"
>
  <form
    className="c1"
    onSubmit={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          disabled={false}
        >
          <div
            className="c5"
          >
            <input
              autoComplete="cc-number"
              autoFocus={true}
              className="c6"
              disabled={false}
              name="ccNumber"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseUp={[Function]}
              type="text"
              value=""
            />
            <label
              className="c7"
            >
              Number
            </label>
          </div>
        </div>
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            <p
              className="c10"
            >
              Wrong number
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c12"
            disabled={false}
          >
            <div
              className="c5"
            >
              <input
                autoComplete="cc-csc"
                className="c6"
                disabled={false}
                name="ccCsc"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseUp={[Function]}
                type="text"
                value=""
              />
              <label
                className="c7"
              >
                CVC
              </label>
            </div>
          </div>
          <div
            className="c8"
          />
        </div>
      </div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c12"
            disabled={false}
          >
            <div
              className="c5"
            >
              <input
                autoComplete="cc-exp"
                className="c6"
                disabled={false}
                name="ccExp"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseUp={[Function]}
                type="text"
                value=""
              />
              <label
                className="c7"
              >
                Expiry Date
              </label>
            </div>
          </div>
          <div
            className="c8"
          />
        </div>
      </div>
    </div>
  </form>
  <div
    className="c13"
  />
</div>
`;
